added analysis script

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Three scripts:
+Four scripts:
 
 1) `scrape-tripadvisor-data.R`
 
@@ -17,8 +17,10 @@ Three scripts:
 
 3) `extract-hotel-data.R`
 
+3) `extract-hotel-data`
+
 The first gathers a list of hotels and the associated links based on the `INPUT-list-of-cities.csv` file. 
 
 The second script loops through the output of the first and downloads the html pages of individual hotel sites. 
 
-The thirds script extracts data from the stored html pages. 
+The thirds script extracts data from the stored html pages. Fourth is for analyzing and producing results.
